Archive2/19/94a2f3d034be05/output
main.cpp:25:5: error: static_assert failed "le fail"
    static_assert(trait<int&, int>::value, "le fail");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
